--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ add_executable( embed_lua "clang-src/embed_lua.c" )
 find_package( SDL2 REQUIRED )
 
 target_link_libraries( sdl ${SDL2_LIBRARIES} m )
-target_link_options( sdl PRIVATE -mwindows )
+
+# variant: no console window on Windows (Wine also works)
+# target_link_options( sdl PRIVATE -mwindows ) # uncomment for Windows (MinGW)
 
 target_link_libraries( embed_lua ${SDL2_LIBRARIES} m )
