[ luajit , not minilua ] luajit in place of minilua ( compatibility : so quite easy to replace in C terms , change of #includes only ) . but for native builds this lead to grow specificities in CMakeLists ( luajit tested : make from sources in MINGW in MSYS in Windows 11 , also tested APT .deb packages from repositories in Debian 12 and Ubuntu 24.04.01 LTS ) . more refinement can be applied in due time and situations .

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,26 @@ add_executable( embed_lua "clang-src/embed_lua.c" )
 
 find_package( SDL2 REQUIRED )
 
-target_link_libraries( sdl ${SDL2_LIBRARIES} m )
+# MinGW64 in Windows (MSYS2-MinGW64)
+# gcc embed_test_01.c -L/home/dario/luajit/src -I/home/dario/luajit/src -lluajit-5.1.dll # Windows 11 , using MSYS2-MinGW64
+if (WIN32)
+    link_directories( c:/MSYS64/home/dario/luajit/src )
+    include_directories( c:/MSYS64/home/dario/luajit/src )
 
-# variant: no console window on Windows (Wine also works)
-# target_link_options( sdl PRIVATE -mwindows ) # uncomment for Windows (MinGW)
+    # variant: no console window on Windows (Wine also works)
+    target_link_options( sdl PRIVATE -mwindows ) # uncomment for Windows (MinGW)
 
-target_link_libraries( embed_lua ${SDL2_LIBRARIES} m )
+    target_link_libraries( sdl ${SDL2_LIBRARIES} m luajit-5.1.dll )
+    target_link_libraries( embed_lua ${SDL2_LIBRARIES} m luajit-5.1.dll )
+endif (WIN32)
+
+# apt-file show libluajit-5.1-dev # Debian 12 or Ubuntu 24.04.01 LTS
+# pkg-config --cflags --libs luajit
+# # Ubuntu 24.04.01 LTS : /usr/lib/x86_64-linux-gnu/pkgconfig/luajit.pc
+# -I/usr/include/luajit-2.1 -lluajit-5.1
+
+if (UNIX)
+    include_directories(/usr/include/luajit-2.1)
+    target_link_libraries( sdl ${SDL2_LIBRARIES} m luajit-5.1 )
+    target_link_libraries( embed_lua ${SDL2_LIBRARIES} m luajit-5.1 )
+endif (UNIX)
