--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             },
             "args": [
             ],
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/lua-scripts",
             "stopOnEntry": false
         }
     ]
