GetTicks() and DeltaTime() for update(dt)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "Lua.diagnostics.globals": [
         "DrawPoint",
-        "SetDrawColor"
+        "SetDrawColor",
+        "GetTicks"
     ]
 }
