--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "Lua.diagnostics.globals": [
         "DrawPoint",
         "SetDrawColor",
-        "GetTicks"
+        "GetTicks",
+        "InputPoint"
     ]
 }
